chore: 更新材质，减少警告